--- a/db_client_add_query_functions.ipynb
+++ b/db_client_add_query_functions.ipynb
@@ -47,7 +47,7 @@
     "# Establish connection between Python and MySQL database via connector API\n",
     "connection=connector.connect(\n",
     "                             user=\"root\", # use your own\n",
-    "                             password=\"lzcmx1\", # use your own\n",
+    "                             password=\"\", # use your own\n",
     "                             db = \"LittleLemonDB\", # use your own\n",
     "                            )\n",
     "print(\"Connection between MySQL and Python is established.\\n\")"
